// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RecordDetailModal > matches the snapshot for a loaded record 1`] = `
"<div data-v-ee0655ff="" role="dialog" aria-modal="true" aria-label="Record detail" style="position: fixed; inset: 0; display: grid; place-items: center; z-index: 60; padding: 24px;">
  <div data-v-ee0655ff="" class="card" tabindex="-1" style="width: 640px; max-width: 100%; max-height: 85vh; overflow-y: auto; box-shadow: var(--sh-pop); padding: 24px; outline-color: none; outline-style: none; outline-width: initial;">
    <div data-v-ee0655ff="" class="row between" style="margin-bottom: 18px;"><span data-v-ee0655ff="" class="kicker">record detail</span><button data-v-ee0655ff="" class="app-btn">close</button></div>
    <div data-v-ee0655ff="">
      <!--v-if-->
      <h3>Test Record</h3><button class="app-btn"> edit </button>
    </div>
    <div data-v-ee0655ff="" class="row wrap gap-3" style="align-items: center; margin-bottom: 18px;"><span data-v-ee0655ff="" class="row gap-2"><span data-v-ee0655ff="" data-icon="github" style="color: var(--accent); flex-grow: 0; flex-shrink: 0; flex-basis: auto;"></span><span data-v-ee0655ff="" class="mono" style="font-size: 12px; color: var(--ink-2);">My GitHub hook</span></span><span data-v-ee0655ff="" class="app-badge">synced</span><span data-v-ee0655ff="" class="mono faint" style="font-size: 12px;">35d ago</span></div>
    <dl data-v-ee0655ff="" class="detail-grid" style="margin-bottom: 18px;">
      <dt data-v-ee0655ff="" class="kicker">file</dt>
      <dd data-v-ee0655ff="" class="mono" style="font-size: 12px; color: var(--info); word-break: break-all;">99-incoming/test.md</dd>
      <dt data-v-ee0655ff="" class="kicker">uuid</dt>
      <dd data-v-ee0655ff="" class="mono" style="font-size: 12px; word-break: break-all;">uuid-1</dd>
    </dl>
    <!--v-if-->
    <div data-v-ee0655ff="">
      <div class="app-code-block"># Heading

        Body</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`RecordDetailModal > matches the snapshot for a record in error status 1`] = `
"<div data-v-ee0655ff="" role="dialog" aria-modal="true" aria-label="Record detail" style="position: fixed; inset: 0; display: grid; place-items: center; z-index: 60; padding: 24px;">
  <div data-v-ee0655ff="" class="card" tabindex="-1" style="width: 640px; max-width: 100%; max-height: 85vh; overflow-y: auto; box-shadow: var(--sh-pop); padding: 24px; outline-color: none; outline-style: none; outline-width: initial;">
    <div data-v-ee0655ff="" class="row between" style="margin-bottom: 18px;"><span data-v-ee0655ff="" class="kicker">record detail</span><button data-v-ee0655ff="" class="app-btn">close</button></div>
    <div data-v-ee0655ff="">
      <!--v-if-->
      <h3>Test Record</h3><button class="app-btn"> edit </button>
    </div>
    <div data-v-ee0655ff="" class="row wrap gap-3" style="align-items: center; margin-bottom: 18px;"><span data-v-ee0655ff="" class="row gap-2"><span data-v-ee0655ff="" data-icon="github" style="color: var(--accent); flex-grow: 0; flex-shrink: 0; flex-basis: auto;"></span><span data-v-ee0655ff="" class="mono" style="font-size: 12px; color: var(--ink-2);">My GitHub hook</span></span><span data-v-ee0655ff="" class="app-badge">error</span><span data-v-ee0655ff="" class="mono faint" style="font-size: 12px;">35d ago</span></div>
    <dl data-v-ee0655ff="" class="detail-grid" style="margin-bottom: 18px;">
      <dt data-v-ee0655ff="" class="kicker">file</dt>
      <dd data-v-ee0655ff="" class="mono" style="font-size: 12px; color: var(--info); word-break: break-all;">99-incoming/test.md</dd>
      <dt data-v-ee0655ff="" class="kicker">uuid</dt>
      <dd data-v-ee0655ff="" class="mono" style="font-size: 12px; word-break: break-all;">uuid-1</dd>
    </dl>
    <div data-v-ee0655ff="" class="app-alert" data-tone="err" style="margin-bottom: 18px;">
      <div data-v-ee0655ff="" class="col gap-2"><span data-v-ee0655ff="">disk full</span>
        <!--v-if--><button data-v-ee0655ff="" class="app-btn" style="align-self: flex-start;">retry sync</button>
      </div>
    </div>
    <div data-v-ee0655ff="">
      <div class="app-code-block"># Heading

        Body</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</div>"
`;
